New Updated Repo 31/01/2024

--- a/JAVA_Project_June/test-output/old/Default suite/classes.html
+++ b/JAVA_Project_June/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>digitPrograms.FindThePrimeNumberFromGivenNumberTest</td>
+<td>stringPrograms.PrintTheReverseStringTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>primeNumberMethod</td>
+<td>reverseStringMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
